# Denmark-HousePrices-Analysis

./: .claudeignore  .env.example  .gitignore  CLAUDE.MD  CLAUDE.md  Makefile  README.md  environment.yml  get_data.ipynb  h2o_xgb_gpu_tuning.db  h2o_xgb_gpu_tuning2.db  memoria_TF.ipynb  pyproject.toml  pyrightconfig.json
.beads/: issues.jsonl  metadata.json
.github/workflows/: tableau-publish.yml
doc/proyect/: requerimiento-data-viz.md
memoria/: informe_TF.ipynb
notebooks/: 00_extraccion_de_datos.ipynb  00_get_data.ipynb  01_exploracion_eda.ipynb  02_analisis_descriptivo.ipynb  03_feature_engineering.ipynb  04_modelado_supervisado.ipynb  05_resultados_finales.ipynb  06_bronze_quality.ipynb  07_silver_quality.ipynb  08_gold_kpis.ipynb  basic_pipeline.ipynb  setup.py
pipeline/: fetch_postal_centroids.py  run_all.py  run_bronze.py  run_gold.py  run_silver.py  run_tableau.py
scripts/: generar_notebooks.py
src/: README_REFACTORING.md  __init__.py  basic_pipeline.ipynb  config.py  descriptive_analysis.py  feature_engineering.py  utils.py  utils_backup.py
src/analysis/: __init__.py  data_quality.py  enhanced_analysis.py  summary_analysis.py  univariate_analysis.py  visualization.py
src/features/: __init__.py  categorical_features.py  derived_features.py  geospatial_features.py  temporal_features.py
src/medallion/: __init__.py  bronze.py  deflation.py  geo.py  gold.py  metadata.py  silver.py  stl.py
src/tableau/: __init__.py  demo_dashboard.py  (+3 more)
tests/: test_bronze.py  test_gold.py  test_rolling_causal.py  test_silver.py
utils/: PLANNER.MD  figures.ipynb
(+30 files in other folders)
