[project]
name = "denmark-houseprices-analysis"
version = "0.0.0"
description = "Análisis exploratorio y modelado predictivo de precios residenciales en Dinamarca (1992–2024)"
readme = "README.md"
requires-python = ">=3.10,<3.13"

# Dependencias usadas por src/, tests/ y notebooks/
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn",
  "scipy",
  "pyarrow",
  "statsmodels",
  "h2o",
  "optuna",
  "scikit-learn",
  "wordcloud",
  "ipython",
  "kaggle",
  "ipykernel>=7.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ipykernel",
  "jupyter",
]
tableau = [
  "tableauhyperapi>=0.0.19000",
  "tableauserverclient>=0.30",
]

[tool.pytest.ini_options]
addopts = "-q"
